Fix book rent, add unauthorized user exception, fix book return invalid user